# ndk-issue-869

./: CMakeLists.txt  README.md  build-cmake-fail.sh  build-cmake-ok.sh  build-raw-fail.sh  build-raw-ok.sh  native-lib.cpp
